--- a/rollerslab-rollingpotato-homepage2/src/main/webapp/resources/css/main.css
+++ b/rollerslab-rollingpotato-homepage2/src/main/webapp/resources/css/main.css
@@ -8,7 +8,30 @@
 	margin: 0.5rem;
 }
 
+.text-footer-sz{
+	font-size: 0.5rem;
+	padding : 1rem 1.5rem;
+}
+
 .down_app {
 	width: 12rem;
     margin: 0.2rem;
+}
+
+.downlaod_navi{
+	position: absolute;
+	width: 7rem;
+	height: 3rem;
+	top: 6rem;
+	left: 67%;
+	margin-right: -500px;
+}
+
+.downlaod_navi img{
+	width: 50px;
+	height: 50px;
+}
+
+.downlaod_navi a{
+	display: inline-block;
 }
