1. 약관에 디자인 깨지는 문제 -creative css 변경 , section 부분

--- a/rollerslab-rollingpotato-homepage2/src/main/webapp/resources/css/creative.css
+++ b/rollerslab-rollingpotato-homepage2/src/main/webapp/resources/css/creative.css
@@ -50,7 +50,7 @@ h6 {
   color: rgba(255, 255, 255, 0.7);
 }
 
-section {
+section:not(#terms) {
   /* padding: 12rem 0; */
   
   -webkit-height: -webkit-calc(100vh - 58px); /* google, safari */
